spacing fix

--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -61,6 +61,13 @@ position: relative;
 
      .content .buttons{
         display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    
+    }
+
+    .content .buttons a{
+        font-size: 1.2rem;
     }
     
 
