--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -17,9 +17,10 @@
     width: 100%;
     padding: 12rem 0rem;
     text-align: left;
-    margin: auto;
+    /* margin: auto; */
     font-size: 1.2rem;
     line-height: 40px;
+    /* margin-bottom: 2rem; */
 }
 
 
@@ -43,14 +44,14 @@
 @media screen and (max-width : 1040px) {
     #about{
         height: 100vh;
-        margin-bottom: 80px;
+        margin-bottom: 180px;
     }
 
     .about-content{
         display: flex;
         flex-direction: column;
         gap: 10px;
-        
+    
         width: 100%;
         height: 50%;
         padding: 3rem 0rem;
